# learntocode

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.ipython/profile_default/startup/: 01_ipytest.py
learntocode/: learntocode.ipynb  runtests.ipynb
learntocode/01_cars/: 01_intro_to_variables.ipynb  02_intro_to_functions.ipynb  03_more_functions.ipynb  04_lists_and_loops.ipynb  05_if_then_else.ipynb  06_challenges.py  07_no_one_right_way.ipynb  08_classes.ipynb
